# fractal-agent-system

./: .gitignore  .mcp.json  CLAUDE.md  README.md  deep-research-report.md  package-lock.json  package.json  pyproject.toml
engine/agent_engine/: __init__.py  agent_loop.py  autonomy.py  claude_adapter.py  claude_code_worker.py  codebase_memory.py  container_sandbox.py  debug_log.py  deterministic_workflow.py  durable_execution.py  graph.py  hierarchical_orchestrator.py  llm_client.py  multi_agent.py  openhands_worker.py  prompt_templates.py  recovery_supervisor.py  run.py  server.py  state_store.py  swarm_worker_node.py  telemetry.py  tool_registry.py  verifier.py  workspace.py
scripts/: doctor.py
skills/brainstorming/: SKILL.md
skills/dispatching-parallel-agents/: SKILL.md
skills/executing-plans/: SKILL.md
skills/finishing-a-development-branch/: SKILL.md
skills/project-doctor/: SKILL.md
skills/receiving-code-review/: SKILL.md
skills/requesting-code-review/: SKILL.md
skills/subagent-driven-development/: SKILL.md
skills/systematic-debugging/: SKILL.md
skills/test-driven-development/: SKILL.md
tests/: conftest.py  test_agent_loop.py  test_autonomy_next_task.py  test_claude_adapter.py  test_codegraph_adapter.py  test_deterministic_workflow.py  test_electron_hardening.py  test_emit_enrichment.py  test_openhands_worker_cleanup.py  test_phase2_approval_flow.py  test_project_doctor.py  test_repo_intelligence.py  test_storage.py  test_tool_registry.py  test_verifier.py  test_workspace_diff.js  test_workspace_policy.py  test_worktree_container_security.py
(+45 files in other folders)
